[package]
name = "syncron"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "syncron.rs"
name = "syncron"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1"
serde = { version = "1.0", features = ["derive"] } # for docopt
serde_json = "1"
sha2 = "0.10"
base16ct = { version = "0.1.1", features = ["alloc"] }
nix = "0.24.1"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1", features = ["full", "process"] }
figment = "*"
chrono = { version = "0.4", features = ["serde"] }
getrandom = "0.2"
tempfile = "3"
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
stderrlog = "0.5.1"
log = "*"
comrak ="0.12"
zip = "0.6"
rand = "0.8.5"

[dev-dependencies]
simple_logger = { version = "2.2", default-features = false, features = [] }

#[dev-dependencies]
#matches = "0.1"
#tokio-test = "*"
